--- a/CSS/banner.css
+++ b/CSS/banner.css
@@ -13,26 +13,53 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    color: #fff;
+    color: rgba(127, 41, 130, 1);
 }
 
 #banner h2 {
-    font-size: 30px;
+    font-size: 28px;
     
+}
+#banner p {
+    font-size: 18px;
+    font-weight: bold;
 }
 
 #banner a {
     display: block;
     width: 100px;
-    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    color: rgba(127, 41, 130, 1);
     text-decoration: none;
-    font-size: 17px;
-    padding: 10px;
-    margin-top: 30%;
-    margin-left: 70%;
-    border: 3px solid #fff;
+    padding: 7px;
+    margin-top: 10px;
+    border: 3px solid rgba(127, 41, 130, 1);
 }
 
 #banner a:hover {
-    background: rgba(51, 51, 51, 0.5);
+    background: rgba(22, 0, 30, 0.5);
+}
+@media (min-width:480px){
+    #banner h2 {
+        font-size: 40px;
+    }
+    #banner a {
+        margin-top: 25px;
+    }
+}
+@media (min-width:768px){
+    #banner {
+        height: 300px;
+        overflow: hidden;
+    }
+    #banner img {
+        height: auto;
+        margin-top: -100px;
+    }
+}
+@media (min-width:1024px){
+    #banner img {
+        margin-top: -200px;
+    }
 }
