--- a/CSS/fontello.css
+++ b/CSS/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?75337457');
-  src: url('../font/fontello.eot?75337457#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?75337457') format('woff2'),
-       url('../font/fontello.woff?75337457') format('woff'),
-       url('../font/fontello.ttf?75337457') format('truetype'),
-       url('../font/fontello.svg?75337457#fontello') format('svg');
+  src: url('../font/fontello.eot?63809896');
+  src: url('../font/fontello.eot?63809896#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?63809896') format('woff2'),
+       url('../font/fontello.woff?63809896') format('woff'),
+       url('../font/fontello.ttf?63809896') format('truetype'),
+       url('../font/fontello.svg?63809896#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?75337457#fontello') format('svg');
+    src: url('../font/fontello.svg?63809896#fontello') format('svg');
   }
 }
 */
@@ -55,8 +55,12 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-menu:before { content: '\e800'; } /* '' */
+.icon-mail:before { content: '\e800'; } /* '' */
 .icon-cuervo:before { content: '\e801'; } /* '' */
 .icon-postura:before { content: '\e802'; } /* '' */
+.icon-menu:before { content: '\e803'; } /* '' */
+.icon-logo:before { content: '\e805'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-youtube:before { content: '\f167'; } /* '' */
-.icon-instagram:before { content: '\f32d'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-whatsapp:before { content: '\f232'; } /* '' */
