--- a/CSS/formulario.css
+++ b/CSS/formulario.css
@@ -4,7 +4,7 @@
     top: 50px;
     left: 0;
     width: 100%;
-    background-color: dimgray;
+    background-color: rgba(127, 41, 130, 1);
     color: #fff;
     width: 500px;
   	max-width: 100%;
