--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -14,7 +14,7 @@ header label {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(51, 51, 51, 0.9);
+    background: rgba(22, 0, 30, 0.9);
     transition: all 0.5s;
     transform: translateX(100%);
 }
@@ -22,16 +22,33 @@ header label {
 .menu a{
     display: block;
     color:  #fff;
+    font-weight: bold;
     height: 50px;
     text-decoration: none;
     padding: 15px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid  rgba(247, 113, 125, 0.3);
 }
 
 .menu a:hover {
-    background: rgba(255, 255, 255, 0.3);
+    background:  rgba(247, 113, 125, 0.3);
 }
 
 #menu-bar:checked ~ .menu {
     transform: translateX(0%);
+}
+@media (min-width:1024px){
+    .menu {
+        position: static;
+        width: auto;
+        height: auto;
+        transform: translateX(0%);
+        float: right;
+        display: flex;
+    }
+    .menu a {
+        border: none;
+    }
+    header label {
+        display: none;
+    }
 }
