--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,6 @@
 @import url(blog.css);
 @import url(formulario.css);
 
-
 * {
   margin: 0;
   padding: 0;
@@ -18,8 +17,8 @@ body {
 header {
   width: 100%;
   height: 50px;
-  background: #333;
-  color: #fff;
+  background: rgba(22, 0, 30, 1);
+  color: rgba(236, 51, 203, 1);
   position: fixed;
   top: 0;
   left: 0;
@@ -48,10 +47,44 @@ section {
   text-align: justify;
   padding-right: 5%;
   padding-left: 5%;
- 
+  color: rgba(127, 41, 130, 1);
+  font-size: 19px;
 }
 iframe {
-  margin-top: 40px;
   max-width: 100%;
-  max-height: 100%;
+  max-height: auto;
+  
+}
+footer .contenedor{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: rgba(127, 41, 130, 1);
+  font-weight: bold;
+}
+.copy {
+  font-size: 20px;
+}
+.redes {
+  width: 100%;
+  text-align: center;
+  font-size: 28px;
+} 
+.redes a {
+  color: rgba(127, 41, 130, 1);
+  text-decoration: none;
+
+}
+@media (min-width:768px) {
+  .redes {
+    width: auto;
+  }
+  footer .contenedor {
+    justify-content: space-between;
+  }
+}
+@media (min-width:1024px) {
+  .contenedor {
+    width: 1000px;
+  }
 }
