--- a/CSS/banner.css
+++ b/CSS/banner.css
@@ -23,17 +23,19 @@
 #banner p {
     font-size: 18px;
     font-weight: bold;
+    text-align: center;
 }
 
 #banner a {
     display: block;
     width: 100px;
+    float: right;
     font-weight: bold;
     font-size: 18px;
     color: rgba(127, 41, 130, 1);
     text-decoration: none;
     padding: 7px;
-    margin-top: 10px;
+    margin-top: 20px;
     border: 3px solid rgba(127, 41, 130, 1);
 }
 
