--- a/CSS/formulario.css
+++ b/CSS/formulario.css
@@ -5,28 +5,27 @@
     left: 0;
     width: 100%;
     background-color: rgba(127, 41, 130, 1);
-    color: #fff;
+    color:rgba(247, 178, 183, 1);
     width: 500px;
   	max-width: 100%;
   	margin: auto;
   	
-  
   }
   #form a {
     width: 100px;
-    color: #fff;
+    color: rgba(247, 178, 183, 1);
     text-decoration: none;
     padding: 5px;
     margin-top: 5px;
-    border: 3px solid #fff;
+    border: 3px rgba(247, 178, 183, 1);
   }
   
   #form .button {
     margin: auto;
     background: rgba(255, 255, 255, 0.1);
-	  border: 2px solid #fff;
+	  border: 2px solid rgba(247, 178, 183, 1);
 	  cursor: pointer;
 	  font-size: 17px;
-	  color:#fff;
+	  color:rgba(247, 178, 183, 1);
 	  padding:5px 15px;
   }
