--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -14,23 +14,23 @@ header label {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(22, 0, 30, 0.9);
+    background: rgba(62, 9, 82, 0.9);
     transition: all 0.5s;
     transform: translateX(100%);
 }
 
 .menu a{
     display: block;
-    color:  #fff;
+    color: rgba(247, 178, 183, 1);
     font-weight: bold;
     height: 50px;
     text-decoration: none;
     padding: 15px;
-    border-bottom: 1px solid  rgba(247, 113, 125, 0.3);
+    border-bottom: 1px solid  rgba(247, 178, 183, 0.13);
 }
 
 .menu a:hover {
-    background:  rgba(247, 113, 125, 0.3);
+    background:  rgba(247, 178, 183, 0.13);
 }
 
 #menu-bar:checked ~ .menu {
