--- a/palette.scss
+++ b/palette.scss
@@ -12,4 +12,4 @@ $color1: rgba(247, 178, 183, 1);
 $color2: rgba(236, 51, 203, 1);
 $color3: rgba(247, 113, 125, 1);
 $color4: rgba(127, 41, 130, 1);
-$color5: rgba(22, 0, 30, 1);
+$color5: rgb(62, 9, 82, 1);
