--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,11 +42,24 @@ section {
   margin-bottom: 25px;
 }
 
-iframe {
-  max-width: 100%;
-  max-height: auto;
-  
+.videos {
+  margin-top: 75px;
+  position: relative;
+  padding-bottom: 56.25%; /* 16/9 ratio */
+  padding-top: 30px; /* IE6 workaround*/
+  height: 0;
+  overflow: hidden;
 }
+.videos iframe,
+.videos object,
+.videos embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+  
 footer .contenedor{
   display: flex;
   flex-wrap: wrap;
